# moshivis

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  docker-bake.hcl
.github/: requirements_github_actions.txt
.github/actions/rust_build/: action.yml
.github/workflows/: checks.yml  rust-ci.yml
client/: Dockerfile  README.md  package-lock.json  package.json
client/public/assets/images/demo/: attribution.txt
client/src/: audio-processor.ts  index.css
client/src/components/Button/: Button.tsx
client/src/components/ImageGallery/: ImageGallery.tsx
client/src/components/Input/: Input.tsx
client/src/pages/Conversation/: Conversation.tsx
client/src/pages/Conversation/components/AudioVisualizer/: ClientVisualizer.tsx  ServerVisualizer.tsx
client/src/pages/Conversation/components/ModelParams/: ModelParams.tsx
client/src/pages/Conversation/components/ServerAudio/: ServerAudio.tsx
client/src/pages/Conversation/components/ServerInfo/: ServerInfo.tsx
client/src/pages/Conversation/components/TextDisplay/: TextDisplay.tsx
client/src/pages/Conversation/components/UserAudio/: UserAudio.tsx
client/src/pages/Conversation/hooks/: useModelParams.ts  useServerInfo.ts  useSocket.ts
client/src/pages/Queue/: Queue.tsx
client/src/pages/Queue/hooks/: useUserEmail.ts
client/src/protocol/: encoder.ts  types.ts
kyuteye_mlx/: .pylintrc  README.md  pixtral-12b-8bit.config  pyproject.toml  siglip448.config
kyuteye_mlx/kyuteye_mlx/: __init__.py  benchmark.py  local_web.py  quantize.py
kyuteye_mlx/kyuteye_mlx/mlx_vlm/models/pixtral/: vision.py
kyuteye_mlx/kyuteye_mlx/mlx_vlm/models/siglip/: vision.py
kyuteye_mlx/kyuteye_mlx/models/: __init__.py  generate.py  lm.py  pixtral.py  siglip.py
kyuteye_mlx/kyuteye_mlx/modules/: config.py  cross_attention.py  kv_cache.py  transformer.py
kyuteye_mlx/kyuteye_mlx/utils/: loading.py  profiling.py  sampling.py
kyuteye_mlx/tests/: test_siglip.py
kyuteye_pt/: README.md  pyproject.toml
kyuteye_pt/configs/: moshika-vis.yaml
kyuteye_pt/kyuteye/: server.py
kyuteye_pt/kyuteye/config/: enums.py  kyuteye_config.py  subconfigs.py
kyuteye_pt/kyuteye/models/: helium.py  hf_model_configs.py  image_projection.py  loaders.py  moshivis.py
kyuteye_pt/kyuteye/modules/: attention.py  cross_attention.py  image_encoder.py  image_transforms.py  streaming_utils.py  transformer.py  utils.py
kyuteye_pt/kyuteye/utils/: dist_utils.py  logging_utils.py  struct_utils.py
kyuteye_pt/tests/: hello.py
kyuteye_rs/: Cargo.toml
kyuteye_rs/configs/: config-moshika-vis-q8.json  config-moshika-vis.json
kyuteye_rs/moshi-backend/: Cargo.toml
kyuteye_rs/moshi-backend/src/: image_embedder.rs  main.rs  metrics.rs  standalone.rs  stream_both.rs  utils.rs
kyuteye_rs/moshi-core/: Cargo.toml
kyuteye_rs/moshi-core/src/: conv.rs  dynamic_logits_processor.rs  lib.rs  lm.rs  lm_generate.rs  lm_generate_multistream.rs  mimi.rs  seanet.rs  streaming.rs  transformer.rs
scripts/: convert_ckpt_utils.py  get_static_client.py
ssvd/: README.md  __init__.py  generate.py  multiturn_instruct.py  multiturn_prompting.py  utils.py
