[workspace]
members = [
    "moshi-core",
    "moshi-backend",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8.1", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.21.7"
bincode = "1.3.3"
byteorder = "1.5.0"
candle = { version = "0.8.3", package = "candle-core" }
candle-flash-attn = "0.8.3"
candle-nn = "0.8.3"
candle-transformers = "0.8.3"
clap = { version = "4.4.12", features = ["derive"] }
color-eyre = "0.6.2"
console_error_panic_hook = "0.1.7"
cpal = "0.15.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
cudarc = { version = "=0.12.1", features = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc", "f16", "cuda-version-from-build-system", "dynamic-linking"], default-features=false }
futures = "0.3.28"
futures-util = "0.3.30"
hf-hub = { version = "0.3.2", features = ["tokio"] }
http = "1.1.0"
hyper = "1.3.1"
image = "0.25.2"
js-sys = "0.3.66"
lazy_static = "1.5.0"
log = "0.4.20"
moshi = { path = "./moshi-core" }
native-tls = "0.2.11"
numpy = "0.23.0"
ogg = { version = "0.9.1", features = ["async"] }
opus = "0.3.0"
prometheus = "0.13.4"
prost = "0.12"
pyo3 = "0.23.0"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.3.1"
ratatui = "=0.26.0"
rayon = "1.8.1"
rcgen = "0.13.1"
regex = "1.10.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
rubato = "0.15.0"
rustls = { version = "0.23.20", features = ["ring"] }
sentencepiece = "0.11.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.115"
symphonia = { version = "0.5.3", features = ["all"] }
timens = "0.1.9"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.24.1"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21.0", features = ["rustls", "native-tls"] }
tonic = "0.11"
tonic-build = "0.11"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tui-logger = "=0.11.1"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
webrtc = "0.10.1"

